fixed z-index nav-bar [@header]

--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,14 @@ header nav{
     position: fixed;
     min-height: 40px;
     background-color: #fff;
+    z-index: 1;
 
 }
 header nav ul {
     display:flex;
     flex-wrap: wrap;
     align-items: center;
-    z-index: 1;
+
 }
 header nav ul li{
     list-style-type: none;
@@ -103,11 +104,13 @@ main{
 
 main .header-main .jumbotron{
     position:relative;
+    z-index: 0;
     
 }
 
 main .header-main .jumbotron .my-col-1-2:nth-child(3){
     position:relative;
+    z-index: 0;
 }
 
 main .header-main .jumbotron .my-col-1-2:nth-child(2)>*{
@@ -160,7 +163,7 @@ footer hr{
     background-color: aqua;
 }
 */
-/*
+
 .debug div{
     border:1px dashed black;
 }
